# oreilly-mlops-with-databricks

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  databricks.yml  demo.py  project_config.yml  pyproject.toml
.claude/commands/: fix-deps.md  run-notebook.md  ship.md
.claude/skills/description-to-excalidraw/: SKILL.md
.claude/skills/evaluate-repo/: SKILL.md
.claude/skills/fix-deps/: SKILL.md
.claude/skills/png-to-excalidraw/: SKILL.md
.claude/skills/run-notebook/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/workflows/: cd.yml  cd_llmops.yml  cd_mlops.yml  ci.yml  ci_llmops.yml  ci_mlops.yml  try_auth.yml
ai_governance/: EU_AI_Act_MLOps_LLMOps_Checklist.xlsx
best_practices/: README.md  checklist.md  foundations.md  llmops.md  mlops.md
databricks_jobs/: model_deployment.yml
demo_artifacts/: logged_model.json  mlflow_experiment.json  run_info.json
llmops/: .pre-commit-config.yaml  README.md  arxiv_agent.py  databricks.yml  eval_inputs.txt  project_config.yml  pyproject.toml
llmops/notebooks/: chapter7_0.test_responses.py  chapter7_1.arxiv_process_docs.py  chapter7_10.deploy_agent.py  chapter7_11.call_agent.py  chapter7_12.propagate_traces.py  chapter7_2.vector_sarch.py  chapter7_2.vector_search.py  chapter7_3.genie.py  chapter7_4.lakebase.py  chapter7_5.mlflow_tracing.py  chapter7_6.agent_evaluation demo.py  chapter7_7.test_agent.py  chapter7_8.evaluate_log_register_agent.py  chapter7_9.create_spn.py  chapter8_1.mlflow_tracing.py  chapter8_2.test_agent.py  chapter8_3.agent_evaluation_demo.py  chapter8_4.evaluate_log_register_agent.py  chapter9_3.call_agent.py  chapter9_4.propagate_traces.py  chapter9_5.cost_monitoring.py
llmops/resources/: integration_test.yml  process_data.yml  production_monitoring.yml  register_deploy_agent.yml  update_traces_aggregated.yml  vector_sarch_job.yml
llmops/resources/dashboard/: agent_monitoring_dashboard.lvdash.json  agent_monitoring_dashboard.yml
llmops/resources/deployment_notebooks/: deploy_agent.py  log_register_agent.py  process_data.py  production_monitoring.py  update_traces_aggregated.py
llmops/src/arxiv_curator/: agent.py  config.py  data_processor.py  evaluation.py  mcp.py  memory.py  vector_search.py
llmops/src/arxiv_curator/utils/: common.py  exceptions.py
llmops/tests/: README.md  conftest.py  test_config.py  test_exceptions.py  test_mcp.py  test_vector_search.py
maturity_assessment/: EU_AI_Act_MLOps_LLMOps_Checklist.xlsx
mlops/: README.md  databricks.yml  demo.py  env_v4.yaml  project_config.yml  pyproject.toml
mlops/demo_artifacts/: logged_model.json  mlflow_experiment.json  run_info.json
mlops/notebooks/: chapter2_preprocess_data.py  chapter3_1.experiment_tracking_demo.py  chapter3_2.model_finetuning.py  chapter3_3.model_logging_registering_demo.py  chapter3_4.model_evaluation.py  chapter4_1.model_serving.py  chapter4_1a.ab_testing_demo.py  chapter4_2.feature_serving.py  chapter4_3.model_serving_feature_lookup.py  chapter4_4.use_spn_to_call_endpoints.py  chapter6_1.call_endpoint.py  chapter6_2.enable_monitor.py  hotel_booking-0.1.0-py3-none-any.whl
mlops/resources/: alert.yml  chapter4_1a_ab_testing.yml  ml_monitoring.yml  ml_pipeline.yml  testing.yml
mlops/scripts/: deploy_model.py  preprocess_data.py  refresh_monitor.py  train_register_model.py
mlops/src/hotel_booking/: config.py  monitoring.py
mlops/src/hotel_booking/data/: __init__.py  data_loader.py  data_processor.py
mlops/src/hotel_booking/models/: lightgbm_model.py  pyfunc_model_wrapper.py  serving.py
mlops/src/hotel_booking/utils/: common.py  exceptions.py
mlops/tests/: README.md  conftest.py  test_common.py  test_config.py  test_data_loader.py  test_data_processor.py  test_exceptions.py  test_lightgbm_model.py  test_monitoring.py  test_pyfunc_wrapper.py  test_serving.py
mlops/typings/: __builtins__.pyi
notebooks/: chapter2_preprocess_data.py  chapter3_1.experiment_tracking_demo.py  chapter3_2.model_finetuning.py  chapter3_3.model_logging_registering_demo.py  chapter3_4.model_evaluation.py  chapter3_experiment_tracking_demo.py  chapter3_model_finetuning.py  chapter3_model_logging_registering_demo.py  chapter4_1.model_serving.py  chapter4_2.feature_serving.py  chapter4_3.model_serving_feature_lookup.py  chapter4_4.use_spn_to_call_endpoints.py  chapter6_1.call_endpoint.py  chapter6_2.enable_monitor.py  chatpter6_1.create_monitoring_table.py  hotel_booking-0.1.0-py3-none-any.whl
resources/: alert.yml  ml_monitoring.yml  ml_pipeline.yml
scripts/: approve.py  deploy_model.py  preprocess_data.py  refresh_monitor.py  train_register_model.py
src/hotel_booking/: config.py  data_processor.py  monitoring.py
src/hotel_booking/data/: __init__.py  data_loader.py  data_processor.py
src/hotel_booking/models/: lightgbm_model.py  pyfunc_model_wrapper.py  serving.py
src/hotel_booking/utils/: common.py  exceptions.py
visuals/: Figure1.1.excalidraw.json  Figure1.3.excalidraw.json  Figure1.4.excalidraw.json  Figure1.5.excalidraw.json  Figure10.1.excalidraw.json  Figure3.3.excalidraw.json  Figure3.5.excalidraw.json  Figure4.1.excalidraw.json  Figure4.2.excalidraw.json  Figure4.4.excalidraw.json  Figure5.1.excalidraw.json  Figure5.10.excalidraw.json  Figure5.15.excalidraw.json  Figure5.16.excalidraw.json  Figure5.17.excalidraw.json  Figure5.17.md  Figure5.2.excalidraw.json  Figure5.3.excalidraw.json  Figure5.4.excalidraw.json  Figure5.5.excalidraw.json  Figure5.6.excalidraw.json  Figure5.7.excalidraw.json  Figure5.8.excalidraw.json  Figure5.9.excalidraw.json  Figure6.2.excalidraw.json  Figure7.1.excalidraw.json  Figure7.2.excalidraw.json  Figure7.7.excalidraw.json  Figure8.1.excalidraw.json  Figure8.5.excalidraw.json  ai_gateway.excalidraw.json  databricks_components.excalidraw.json  mlflow_evals.excalidraw.json
